kube-objects/cluster-watch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cluster-watch
  namespace: my-watch
  labels:
    app: cluster-watch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cluster-watch
  template:
    metadata:
      labels:
        app: cluster-watch
    spec:
      serviceAccountName: cluster-watch-sa
      securityContext:
        runAsUser: 1000
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: cluster-watch
          image: 460576937871.dkr.ecr.eu-west-2.amazonaws.com/eks_ecr:v28
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              cpu: 250m
              memory: 70Mi
            limits:
              cpu: 500m
              memory: 140Mi
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10


---

apiVersion: v1
kind: Service
metadata:
  name: cluster-watch-service
  namespace: my-watch
  labels:
    app: cluster-watch
spec:
  selector:
    app: cluster-watch
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
       


---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cluster-watch-ingress
  namespace: my-watch
  annotations:
    cert-manager.io/cluster-issuer: "issuer"
     
spec:
  ingressClassName: nginx
  rules:
    - host: cluster-watch.gutama-devops-portfolio.link
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cluster-watch-service
                port:
                  number: 80
  tls:
    - hosts:
      - cluster-watch.gutama-devops-portfolio.link
      secretName: the-app-watch-tls

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cluster-watch-network-policy
  namespace: my-watch
spec:
    podSelector:
      matchLabels:
        app: cluster-watch
    policyTypes:
      - Ingress
    ingress:
     - from:
        - namespaceSelector:
            matchLabels: 
              kubernetes.io/metadata.name: ingress-nginx 

    ports:
      - protocol: TCP
        port: 5000
